Update WebAssembly demo

--- a/BlazorWebAssemblyTooltipsTest/BlazorWebAssemblyTooltipsTest.csproj
+++ b/BlazorWebAssemblyTooltipsTest/BlazorWebAssemblyTooltipsTest.csproj
@@ -15,4 +15,15 @@
     <ProjectReference Include="..\BlazorTooltips\BlazorTooltips.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\css\bootstrap\bootstrap.min.css">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="wwwroot\css\bootstrap\bootstrap.min.css.map">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
