--- a/BlazorWebAssemblyTooltipsTest/BlazorWebAssemblyTooltipsTest.csproj
+++ b/BlazorWebAssemblyTooltipsTest/BlazorWebAssemblyTooltipsTest.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.10" PrivateAssets="all" />
+    <PackageReference Include="PublishSPAforGitHubPages.Build" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
